@@ -2,6 +2,7 @@ Revision history for CGI-Info
 
 0.86
 	Ensure correct message is logged on SQL injection attempt
+	Remember warnings in the warnings array - added warnings() method
 
 0.85	Sun Nov 17 09:49:52 EST 2024
 	Send back HTTP code 422 when argument fails "allow"
